add jwt
